--- a/cm-ui/components.qrc
+++ b/cm-ui/components.qrc
@@ -6,5 +6,8 @@
         <file alias="CommandButton.qml">components/CommandButton.qml</file>
         <file alias="CommandBar.qml">components/CommandBar.qml</file>
         <file alias="StringEditorSingleLine.qml">components/StringEditorSingleLine.qml</file>
+        <file alias="Panel.qml">components/Panel.qml</file>
+        <file alias="AddressEditor.qml">components/AddressEditor.qml</file>
+        <file alias="SearchResultDelegate.qml">components/SearchResultDelegate.qml</file>
     </qresource>
 </RCC>
